--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "cakephp/plugin-installer": "^1.3",
         "dompdf/dompdf": "^1.0",
         "friendsofcake/cakepdf": "^4.1",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+      "ext-json": "*"
     },
     "require-dev": {
         "cakephp/bake": "^2.3",
